--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "build-type": "vue-tsc --declaration --emitDeclarationOnly "
   },
   "dependencies": {
+    "ace-builds": "^1.13.0",
     "axios": "^0.27.2",
-    "coder-vform-render": "^0.0.4",
+    "clipboard": "^2.0.11",
+    "coder-vform-render": "^0.0.6",
     "element-plus": "^2.2.4",
-    "vue": "^3.2.37"
+    "file-saver": "^2.0.5",
+    "vue": "^3.2.37",
+    "vuedraggable-es": "^4.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
@@ -36,6 +40,6 @@
     "unplugin-vue-components": "^0.22.9",
     "vite": "^3.0.7",
     "vue-router": "^4.1.6",
-    "vue-tsc": "^0.39.5"
+    "vue-tsc": "^1.0.9"
   }
 }
