--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "ace-builds": "^1.13.0",
     "axios": "^0.27.2",
     "clipboard": "^2.0.11",
-    "coder-vform-render": "^0.0.7",
+    "coder-vform-render": "^0.0.8",
     "element-plus": "^2.2.4",
     "file-saver": "^2.0.5",
+    "v-drag": "^3.0.8",
     "vue": "^3.2.37",
     "vuedraggable-es": "^4.1.1"
   },
