--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ace-builds": "^1.13.0",
     "axios": "^0.27.2",
     "clipboard": "^2.0.11",
-    "coder-vform-render": "^0.0.8",
+    "coder-vform-render": "^0.0.13",
     "element-plus": "^2.2.4",
     "file-saver": "^2.0.5",
     "v-drag": "^3.0.8",
@@ -35,11 +35,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
+    "@vitejs/plugin-vue-jsx": "^2.1.1",
     "ant-design-vue": "^3.2.6",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.8.7",
     "unplugin-vue-components": "^0.22.9",
     "vite": "^3.0.7",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-router": "^4.1.6",
     "vue-tsc": "^1.0.9"
   }
