--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "ESNext",
       "DOM"
     ],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+  
   },
   "include": [
     "lib/**/*.ts",
