--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,17 @@
       "DOM"
     ],
     "skipLibCheck": true,
-  
   },
   "include": [
     "lib/**/*.ts",
     "lib/**/*.d.ts",
     "lib/**/*.tsx",
-    "lib/**/*.vue"
-, "lib/utils/emitter.js", "lib/utils/emitter.js", "lib/designer/designer.js", "lib/designer/designer.js"  ],
+    "lib/**/*.vue",
+    "lib/utils/emitter.js",
+    "lib/utils/emitter.js",
+    "lib/designer/designer.js",
+    "lib/designer/designer.js"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
