--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "build-type": "vue-tsc --declaration --emitDeclarationOnly "
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "@element-plus/icons-vue": "^2.0.4",
     "ace-builds": "^1.13.0",
     "axios": "^0.27.2",
     "clipboard": "^2.0.11",
-    "coder-vform-element-plus": "0.0.5",
-    "coder-vform-render": "^0.0.16",
+    "coder-vform-element-plus": "0.1.0",
+    "coder-vform-render": "0.1.0",
     "element-plus": "^2.2.4",
     "file-saver": "^2.0.5",
+    "mitt": "^3.0.0",
     "v-drag": "^3.0.8",
     "vue": "^3.2.37",
     "vuedraggable-es": "^4.1.1"
