--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "axios": "^0.27.2",
     "clipboard": "^2.0.11",
     "coder-vform-element-plus": "0.1.0",
-    "coder-vform-render": "0.1.0",
+    "coder-vform-render": "^0.1.3",
     "element-plus": "^2.2.4",
     "file-saver": "^2.0.5",
     "mitt": "^3.0.0",
