--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "ace-builds": "^1.13.0",
     "axios": "^0.27.2",
     "clipboard": "^2.0.11",
-    "coder-vform-element-plus": "0.1.0",
-    "coder-vform-render": "^0.1.3",
+    "coder-vform-element-plus": "0.1.16",
+    "coder-vform-render": "0.1.13",
     "element-plus": "^2.2.4",
     "file-saver": "^2.0.5",
     "mitt": "^3.0.0",
