--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coder-vform-designer",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "files": [
     "dist"
@@ -28,11 +28,16 @@
     "ace-builds": "^1.13.0",
     "axios": "^0.27.2",
     "clipboard": "^2.0.11",
-    "coder-vform-element-plus": "0.1.16",
-    "coder-vform-render": "0.1.13",
+    "coder-vform-element-plus": "E:\\openSource\\coder-to-vue3\\coder-vform-element-plus",
+    "coder-vform-render": "^0.1.20",
     "element-plus": "^2.2.4",
     "file-saver": "^2.0.5",
     "mitt": "^3.0.0",
+    "oa-car-components": "0.1.9",
+    "oa-contract-compoents": "^0.2.12",
+    "oa-organization-components": "^0.1.14",
+    "oa-preview-components": "^0.2.0",
+    "oa-vform-components": "C:\\proj\\oa\\oa-vform-compoents",
     "v-drag": "^3.0.8",
     "vue": "^3.2.37",
     "vuedraggable-es": "^4.1.1"
